2008-03-16  Mark Probst  <mark.probst@gmail.com>

	* generic-sharing.c, class-internals.h: Support for putting
	methods into the runtime generic context.

2008-03-16  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_setup_fields): Ignore calls made to this function for
	classes which are generic instances of not-yet finished typebuilders. Fixes
	#351172.

	* reflection.c (fixup_method): Add support for FieldOnTypeBuilderInst.

2008-03-15  Zoltan Varga  <vargaz@gmail.com>

	* metadata-internals.h (MonoDynamicImage): Add 'generic_def_objects' hash table.

	* class-internals.h (MonoMethodInflated): Remove the rarely used reflection_info
	field, replace it with a hash table in MonoDynamicImage.

	* reflection.c (inflate_mono_method): Access the generic definition object from
	image->generic_def_objects instead of imethod->reflection_info.

	* reflection.c (mono_reflection_bind_generic_method_parameters): Ditto.	

	* icall.c (ves_icall_MonoMethod_GetGenericMethodDefinition): Ditto.
	
	* image.c (mono_image_close): Move the dynamic image freeing code to a separate
	function in reflection.c so it is easier to keep in sync with the dynamic image
	creation code.

	* reflection.c (mono_dynamic_image_free): New internal function, extracted from
	mono_image_close ().

2008-03-15  Mark Probst  <mark.probst@gmail.com>

	* class.c (mono_class_generic_sharing_enabled): Disable generic
	sharing for all architectures except AMD64 and x86 to fix build.

2008-03-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c: Use the generic definition MonoGenericContext when available.
	Remove code for checking generics instance compatibility in favor of
	mono_class_is_assignable_from.

2008-03-14  Mark Probst  <mark.probst@gmail.com>

	* marshal.c, marshal.h, metadata-internals.h, image.c,
	wrapper-types.h: New wrapper for invoking a shared static method
	without having to pass the runtime generic context argument.

2008-03-14 Rodrigo Kumpera  <rkumpera@novell.com>
